--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
@@ -20,67 +20,77 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:weightSum="1">
+            android:layout_height="match_parent">
             <RadioGroup
                 android:minWidth="25px"
                 android:minHeight="25px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight=".6"
-                android:layout_margin="4dp"
                 android:gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal"
                 android:layout_gravity="center"
                 android:id="@+id/rgControlMethod">
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="Mode 1"
-                    android:textSize="24dp"
-                    android:layout_margin="10dp"
-                    android:id="@+id/rbThrottleLeft" />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Mode 2"
-                    android:textSize="24dp"
-                    android:layout_margin="10dp"
-                    android:id="@+id/rbThrottleRight" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_weight=".5">
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:text="Mode 1"
+                        android:textSize="24dp"
+                        android:layout_marginBottom="4dp"
+                        android:id="@+id/rbThrottleLeft" />
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_weight=".5">
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Mode 2"
+                        android:textSize="24dp"
+                        android:layout_marginBottom="4dp"
+                        android:id="@+id/rbThrottleRight" />
+                </LinearLayout>
             </RadioGroup>
-        <!-- DESCRIPTION IMAGEVIEW -->
+        </LinearLayout>
+    <!-- DESCRIPTION IMAGEVIEW -->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="1">
             <ImageView
                 android:id="@+id/ivMode"
                 android:src="@drawable/mode1"
+                android:scaleX="1"
+                android:scaleY="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
+                android:layout_height="120dp"
+                android:layout_weight=".5"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp" />
-        <ImageView
+                android:adjustViewBounds="true" />
+            <ImageView
                 android:id="@+id/ivMode"
                 android:src="@drawable/mode2"
+                android:scaleX="1"
+                android:scaleY="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
+                android:layout_height="120dp"
+                android:layout_weight=".5"
                 android:scaleType="centerInside"
-                android:adjustViewBounds="true"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp" />
+                android:adjustViewBounds="true" />
         </LinearLayout>
-    <!-- HEIGHT CONTROL
-    <ToggleButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" /> -->
-    <!-- START BUTTON -->
+    <!-- Start controller button -->
         <Button
             android:id="@+id/btStart"
             android:textSize="20dp"
@@ -91,7 +101,7 @@
             android:layout_margin="10dp"
             android:textColor="#ffffff"
             android:background="#005DA9" />
-    <!-- BACK BUTTON -->
+    <!-- Back button -->
         <Button
             android:id="@+id/btBackToMain"
             android:textSize="20dp"
