--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerLayout.axml
@@ -6,28 +6,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1.0">
-        <SeekBar
-            android:id="@+id/sbTrimbar"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:max="60"
-            android:progress="30"
-            android:progressDrawable="@drawable/myseekbar" />
-    <!--android:layout_marginTop="10dp"-->
-        <TextView
-            android:id="@+id/tvTrimValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:textSize="14dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp" />
+        android:layout_height="wrap_content">
         <Button
             android:id="@+id/btnAltitudeControl"
             android:layout_width="150dp"
@@ -37,6 +16,28 @@
             android:textColor="#ffffff"
             android:background="#005DA9"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal|center_vertical" />
+        <SeekBar
+            android:id="@+id/sbTrimbar"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:gravity="right|center_horizontal"
+            android:max="60"
+            android:progress="30"
+            android:progressDrawable="@drawable/myseekbar" />
+        <TextView
+            android:id="@+id/tvTrimValue"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="14dp"
+            android:gravity="right"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp" />
         <RadioGroup
             android:layout_width="match_parent"
@@ -48,7 +49,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Yaw Trim"
+                android:text="Yaw"
                 android:textSize="12dp"
                 android:id="@+id/rbYawTrim"
                 android:height="1dp"
@@ -58,7 +59,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pitch Trim"
+                android:text="Pitch"
                 android:textSize="12dp"
                 android:id="@+id/rbPitchTrim"
                 android:height="1dp"
@@ -66,7 +67,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Roll Trim"
+                android:text="Roll"
                 android:textSize="12dp"
                 android:id="@+id/rbRollTrim"
                 android:height="1dp"
