--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
@@ -2,9 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:weightSum="1">
     <ListView
         android:id="@+id/lvData"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:divider="#005DA9"
+        android:dividerHeight="5dp" />
 </LinearLayout>
